--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -78,8 +78,6 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-
-
         <form action="forms/signin.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="600">
           <div class="row gy-4">
 
@@ -88,7 +86,7 @@
             </div>
 
             <div>
-              <input type="date" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="subject" placeholder="Data de nascimento" required="">
+              <input type="date" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="subject" placeholder="dd/mm/aaaa" required="">
             </div>
 
             <div>
@@ -96,12 +94,16 @@
             </div>
 
             <div>
-              <input type="password" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="password" placeholder="Senha" required="">
+              <input type="password" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="password" placeholder="Senha" required="" autocomplete="new-password">
             </div>
 
             <div>
-              <input type="password" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="password" placeholder="Confirme a senha" required="">
+              <input type="password" style="width: 400px;height: 45px;background-color: #000000;opacity: 80%;" name="confirm_password" placeholder="Confirme a senha" required="" autocomplete="new-password">
             </div>
+
+            <div class="loading" style="display:none">Carregando...</div>
+            <div class="error-message" style="display:none"></div>
+            <div class="sent-message" style="display:none">Cadastro realizado com sucesso!</div>
 
             <div class="row gy-4">
               <div class="vertical-center">
@@ -109,7 +111,6 @@
               </div>
             </div>
             
-
           </div>
         </form>
 
